--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "jsx": "react-native",
+    "module": "ESNext",
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
     "paths": {
       "@/*": [
         "./*"
